# ysqlite3

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  config.hpp.in  sqlite3.sln
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  encryption.cpp  main.cpp  rot13.cpp  simple.cpp
extensions/: CMakeLists.txt  ysqlite3_crypt_vfs.cpp
shell/: CMakeLists.txt  entrypoint.cpp  shell.c
sqlite3/: CMakeLists.txt  address_transporter.cpp  address_transporter.hpp  aes_ccm_mode.cpp  aes_ccm_mode.hpp  aes_gcm_mode.cpp  aes_gcm_mode.hpp  base64.hpp  chacha20_aes_gcm_mode.cpp  chacha20_aes_gcm_mode.hpp  chacha20_poly1305_mode.cpp  chacha20_poly1305_mode.hpp  config.hpp  database.cpp  database.hpp  encrypted_database.cpp  encrypted_database.hpp  encrypted_main_vfs_class.cpp  encrypted_main_vfs_class.hpp  encrypted_vfs.cpp  encrypted_vfs.hpp  encryption_context.cpp  encryption_context.hpp  encryption_mode.hpp  exception.hpp  handle.cpp  handle.hpp  key.hpp  no_encryption_context.cpp  no_encryption_context.hpp  openssl_encryption_context.cpp  openssl_encryption_context.hpp  scope_exit.cpp  scope_exit.hpp  sqlite3.h  sqlite3.vcxproj  sqlite3.vcxproj.filters  sqlite3_connection.cpp  sqlite3_connection.hpp  sqlite3_dataholder.cpp  (+5 more)
src/: database.cpp  database.hpp  error.hpp  results.cpp  results.hpp  span.hpp  statement.cpp  statement.hpp  transaction.cpp  transaction.hpp
src/function/: base64_encoder.cpp  base64_encoder.hpp  function.hpp  regexp.cpp  regexp.hpp
src/vfs/: file.cpp  streaming_vfs.hpp  vfs.cpp  vfs.hpp
src/vfs/layer/: encryption_file.hpp  encryption_layer.hpp  encryptor.hpp
tests/: CMakeLists.txt  crypt_vfs.cpp
ysqlite3/: cast.hpp  config.hpp  database.cpp  database.hpp  error.hpp  finally.hpp  results.cpp  results.hpp  scope_exit.hpp  span.hpp  statement.cpp  statement.hpp  transaction.cpp  transaction.hpp
ysqlite3/exception/: base_exception.hpp  closed_database_exception.hpp  closed_statement_exception.hpp  database_exception.hpp  parameter_exception.hpp  sql_exception.hpp  sqlite3_exception.hpp
ysqlite3/function/: base64_encoder.cpp  base64_encoder.hpp  digest.cpp  digest.hpp  function.hpp  regexp.cpp  regexp.hpp
ysqlite3/util/: templated_of.hpp
ysqlite3/vfs/: crypt_file.hpp  file.cpp  file.hpp  page_transforming_file.hpp  sqlite3_file_wrapper.cpp  sqlite3_file_wrapper.hpp  sqlite3_vfs_wrapper.hpp  vfs.cpp  vfs.hpp
ysqlite3/vfs/layer/: data_manager.hpp  encryption_file.hpp  encryption_layer.hpp  layer.hpp  layered_file.cpp  layered_file.hpp  layered_vfs.hpp
